Table phim {
  ma_phim int [pk, increment]
  ten_phim varchar(255) [not null]
  thoi_luong int [not null]
  ngay_phat_hanh date
  ngon_ngu varchar(100)
  trang_thai varchar(50) [not null] // sap_chieu, dang_chieu, ngung_chieu
  gioi_han_tuoi varchar(50) // P, K, T13, T16, T18
  url_anh varchar(255)

  created_at timestamp
  updated_at timestamp
}

Table dao_dien {
  ma_dao_dien int [pk, increment]
  ten_dao_dien varchar(255) [not null]

  created_at timestamp
  updated_at timestamp
}

Table the_loai {
  ma_the_loai int [pk, increment]
  ten_the_loai varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table dao_dien_phim {
  ma_phim int [pk, ref: > phim.ma_phim]
  ma_dao_dien int [pk, ref: > dao_dien.ma_dao_dien]
}

Table the_loai_phim {
  ma_phim int [pk, ref: > phim.ma_phim]
  ma_the_loai int [pk, ref: > the_loai.ma_the_loai]
}

//-----Nhóm Quản Lý Rạp-----
Table rap {
  ma_rap int [pk, increment]
  ten_rap varchar(255) [not null]
  dia_chi varchar(255)

  created_at timestamp
  updated_at timestamp
}

Table loai_phong {
  ma_loai_phong int [pk, increment]
  ten_loai_phong varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table phong_chieu {
  ma_phong int [pk, increment]
  ten_phong varchar(100) [not null]
  ma_rap int [not null, ref: > rap.ma_rap]
  ma_loai_phong int [not null, ref: > loai_phong.ma_loai_phong]
  trang_thai varchar(50) [not null] // hoat_dong, bao_tri, ngung_su_dung

  created_at timestamp
  updated_at timestamp
}

//-----Nhóm Quản Lý Ghế-----
Table loai_ghe {
  ma_loai_ghe int [pk, increment]
  ten_loai_ghe varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table ghe {
  ma_ghe int [pk, increment]
  ma_phong int [not null, ref: > phong_chieu.ma_phong]
  ma_loai_ghe int [not null, ref: > loai_ghe.ma_loai_ghe]
  hang varchar(10) [not null]
  cot varchar(10) [not null]
  trang_thai varchar(50) [not null] // hoat_dong, hong, bao_tri

  created_at timestamp
  updated_at timestamp

  indexes {
    (ma_phong, hang, cot) [unique]
  }
}

//-----Nhóm Quản Lý Suất Chiếu-----
Table trang_thai_suat_chieu {
  ma_trang_thai int [pk, increment]
  ten_trang_thai varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table suat_chieu {
  ma_suat_chieu int [pk, increment]
  ma_phim int [not null, ref: > phim.ma_phim]
  ma_phong int [not null, ref: > phong_chieu.ma_phong]
  thoi_gian_bat_dau datetime [not null]
  thoi_gian_ket_thuc datetime [not null]
  ma_trang_thai int [not null, ref: > trang_thai_suat_chieu.ma_trang_thai]

  created_at timestamp
  updated_at timestamp
}

//-----Nhóm Quản Lý Vé-----
Table trang_thai_ve {
  ma_trang_thai int [pk, increment]
  ten_trang_thai varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table bang_gia_ve {
  ma_bang_gia int [pk, increment]
  ma_loai_ghe int [not null, ref: > loai_ghe.ma_loai_ghe]
  ma_loai_phong int [not null, ref: > loai_phong.ma_loai_phong]
  gia decimal(10,2) [not null]

  created_at timestamp
  updated_at timestamp

  indexes {
    (ma_loai_ghe, ma_loai_phong) [unique]
  }
}

Table ve {
  ma_ve int [pk, increment]
  ma_suat_chieu int [not null, ref: > suat_chieu.ma_suat_chieu]
  ma_ghe int [not null, ref: > ghe.ma_ghe]
  ma_bang_gia int [not null, ref: > bang_gia_ve.ma_bang_gia]
  ma_trang_thai int [not null, ref: > trang_thai_ve.ma_trang_thai]

  created_at timestamp
  updated_at timestamp

  indexes {
    (ma_suat_chieu, ma_ghe) [unique]
  }
}

//-----Nhóm Quản Lý Sản Phẩm-----
Table loai_san_pham {
  ma_loai_san_pham int [pk, increment]
  ten_loai_san_pham varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table san_pham {
  ma_san_pham int [pk, increment]
  ten_san_pham varchar(255) [not null]
  ma_loai_san_pham int [not null, ref: > loai_san_pham.ma_loai_san_pham]
  so_luong_ton int [not null, default: 0]
  gia_co_ban decimal(10,2) [not null]
  trang_thai varchar(50) // dang_ban, ngung_ban
  url_anh varchar(255)

  created_at timestamp
  updated_at timestamp
}

//-----Nhóm Quản Lý Nhân Viên-----
Table chuc_vu {
  ma_chuc_vu int [pk, increment]
  ten_chuc_vu varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table nhan_vien {
  ma_nhan_vien int [pk, increment]
  ten_nhan_vien varchar(255) [not null]
  gioi_tinh varchar(20)
  so_dien_thoai varchar(20)
  email varchar(255)
  ngay_vao_lam date
  ma_chuc_vu int [not null, ref: > chuc_vu.ma_chuc_vu]
  trang_thai varchar(50) [not null] // dang_lam, tam_nghi, nghi_viec

  created_at timestamp
  updated_at timestamp
}

Table tai_khoan {
  ma_tai_khoan int [pk, increment]
  ma_nhan_vien int [not null, unique, ref: > nhan_vien.ma_nhan_vien]
  ten_tai_khoan varchar(100) [not null, unique]
  mat_khau varchar(255) [not null]
  trang_thai varchar(50) [not null] // hoat_dong, bi_khoa

  created_at timestamp
  updated_at timestamp
}

//-----Nhóm Hóa Đơn-----
Table trang_thai_hoa_don {
  ma_trang_thai int [pk, increment]
  ten_trang_thai varchar(100) [not null, unique]

  created_at timestamp
  updated_at timestamp
}

Table hoa_don {
  ma_hoa_don int [pk, increment]
  ma_nhan_vien int [not null, ref: > nhan_vien.ma_nhan_vien]
  phuong_thuc_thanh_toan varchar(100) // tien_mat, chuyen_khoan, the
  tong_tien decimal(10,2) [not null, default: 0]
  ma_trang_thai int [not null, ref: > trang_thai_hoa_don.ma_trang_thai]
  thoi_gian_thanh_toan datetime

  created_at timestamp
  updated_at timestamp
}

Table hoa_don_ve {
  ma_hoa_don int [pk, ref: > hoa_don.ma_hoa_don]
  ma_ve int [pk, ref: > ve.ma_ve]
  don_gia decimal(10,2) [not null]
}

Table hoa_don_san_pham {
  ma_hoa_don int [pk, ref: > hoa_don.ma_hoa_don]
  ma_san_pham int [pk, ref: > san_pham.ma_san_pham]
  so_luong int [not null, default: 1]
  don_gia decimal(10,2) [not null]
  thanh_tien decimal(10,2) [not null]
}